--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,37 +12,16 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	</head>
 	<body>
 		<Header />
-		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
+		<main class="pt-20 pb-10">
+			<h1>👋🏼 Hi, there!</h1> 
+			<h2>I'm Lucas Da Cruz!</h2>
 			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
+				Welcome to my website! I am a passionate Software Engineer with a strong interest in continuous learning and tackling new challenges. 
 			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/content/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
+			<p class="pb-20">
+				I currently work full-time at <a href="https://www.ecolab.com/" target="_blank">Ecolab</a> as a Software Engineer and part-time as an automation engineer contractor for <a href="https://www.torchlight.care/" target="_blank">Torchlight</a>. 
+				I am also pursuing a Bachelor of Science in Software Engineering at <a href="https://www.wgu.edu/" target="_blank">Western Governors University (WGU)</a>, 
+				striving to expand my skills and expertise in the field.</a>				
 			</p>
 		</main>
 		<Footer />
