--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ const today = new Date();
 ---
 
 <footer>
-	&copy; {today.getFullYear()} {SITE_TITLE}. All rights reserved.
+	Copyright &copy; {today.getFullYear()} | All rights reserved.
 	<div class="social-links">
 		<a href="https://www.linkedin.com/in/lucas-da-cruz-992738110/" target="_blank">
 			<span class="sr-only">Go to my LinkedIn</span>
