--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,11 +16,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			<h1>👋🏼 Hi, there!</h1> 
 			<h2>I'm Lucas Da Cruz!</h2>
 			<p>
-				Welcome to my website! I am a passionate Software Engineer with a strong interest in continuous learning and tackling new challenges. 
+				I am a Software Engineer 🧑‍💻 and a bookworm 🤓📚
 			</p>
 			<p class="pb-20">
-				I currently work full-time at <a href="https://www.ecolab.com/" target="_blank">Ecolab</a> as a Software Engineer and part-time as an automation engineer contractor for <a href="https://www.torchlight.care/" target="_blank">Torchlight</a>. 
-				I am also pursuing a Bachelor of Science in Software Engineering at <a href="https://www.wgu.edu/" target="_blank">Western Governors University (WGU)</a>, 
+				I currently work full-time at <a class="underline" href="https://www.ecolab.com/" target="_blank">Ecolab</a> as a Software Engineer and part-time as an automation engineer contractor for <a class="underline" href="https://www.torchlight.care/" target="_blank">Torchlight</a>. 
+				I am also pursuing a Bachelor's of Science in Software Engineering at <a class="underline" href="https://www.wgu.edu/" target="_blank">Western Governors University (WGU)</a>, 
 				striving to expand my skills and expertise in the field.</a>				
 			</p>
 		</main>
