--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,21 +6,31 @@ const today = new Date();
 <footer>
 	Copyright &copy; {today.getFullYear()} | All rights reserved.
 	<div class="social-links">
-		<a href="https://www.linkedin.com/in/lucas-da-cruz-992738110/" target="_blank">
-			<span class="sr-only">Go to my LinkedIn</span>
-			<svg viewBox="0 0 34 34" width="34" height="34">
-				<path fill="currentcolor" d="M7.167 12.536H3.447V28H7.167V12.536zM5.307 10.463c-1.208 0-2.185-.977-2.185-2.185S4.099 6.094 5.307 6.094 7.492 7.07 7.492 8.278c0 1.208-.977 2.185-2.185 2.185zm6.769 2.073h-3.72V28h3.72v-7.57c0-2.74 1.285-4.494 3.664-4.494 2.379 0 3.487 1.755 3.487 4.494V28h3.72v-7.906c0-4.388-2.36-6.8-6.33-6.8-3.97 0-5.54 3.085-5.54 6.8V28h-.001z" fill="#fff"></path>
-			</svg>
-		</a>  
-		<a href="https://github.com/ldacruz94" target="_blank">
-			<span class="sr-only">Go to my GitHub repo</span>
-			<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
-				><path
-					fill="currentColor"
-					d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
-				></path></svg
-			>
-		</a>
+		<a href="https://www.linkedin.com/in/lucas-da-cruz-992738110" target="_blank">
+				<span class="sr-only">Visit my LinkedIn profile</span>
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="32" height="32" fill="currentcolor">
+				  <path d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.3c-.97 0-1.75-.79-1.75-1.75s.79-1.75 1.75-1.75 1.75.79 1.75 1.75-.78 1.75-1.75 1.75zm13.5 11.3h-3v-5.6c0-1.34-.03-3.07-1.87-3.07-1.87 0-2.16 1.46-2.16 2.97v5.7h-3v-10h2.88v1.36h.04c.4-.75 1.38-1.54 2.84-1.54 3.04 0 3.6 2 3.6 4.63v5.55z"/>
+				</svg>
+			  </a>			  
+			<a href="https://github.com/ldacruz94" target="_blank">
+				<span class="sr-only">Go to my GitHub repo</span>
+				<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
+					><path
+						fill="currentcolor"
+						d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
+					></path>
+				</svg
+				>
+			</a>
+			<a href="mailto:lucaspavesi11@gmail.com" target="_blank">
+				<span class="sr-only">Send me an email</span>
+				<svg viewBox="0 0 24 24" aria-hidden="true" width="32" height="32">
+				  <path
+					fill="currentcolor"
+					d="M20 4H4C2.9 4 2 4.9 2 6v12c0 1.1 0.9 2 2 2h16c1.1 0 2-0.9 2-2V6c0-1.1-0.9-2-2-2zm0 4.75L12 12.5 4 8.75V6l8 4.5 8-4.5v2.75z"
+				  ></path>
+				</svg>
+			  </a>	
 	</div>
 </footer>
 <style>
