Fix config for site base

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,15 +1,15 @@
 ---
 import HeaderLink from './HeaderLink.astro';
-import { SITE_TITLE } from '../consts';
+import { SITE_TITLE, SITE_BASE } from '../consts';
 ---
 
 <header>
 	<nav>
-		<h2><a class="font-bold" href="/">{SITE_TITLE}</a></h2>
+		<h2><a class="font-bold" href=`${SITE_BASE}/`>{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
+			<HeaderLink href=`${SITE_BASE}/`>Home</HeaderLink>
+			<HeaderLink href=`${SITE_BASE}/blog`>Blog</HeaderLink>
+			<HeaderLink href=`${SITE_BASE}/about`>About</HeaderLink>
 		</div>
 		<div class="social-links">
 			<a href="https://www.linkedin.com/in/lucas-da-cruz-992738110" target="_blank">
