--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@ import { SITE_TITLE } from '../consts';
 	<nav>
 		<h2><a class="font-bold" href=`${import.meta.env.BASE_URL}/`>{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href=`${import.meta.env.BASE_URL}/`>Home</HeaderLink>
+			<HeaderLink href=`/`>Home</HeaderLink>
 			<HeaderLink href=`${import.meta.env.BASE_URL}/blog`>Blog</HeaderLink>
 			<HeaderLink href=`${import.meta.env.BASE_URL}/about`>About</HeaderLink>
 		</div>
