Readd font, fix file url paths, add new blog

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,6 +6,6 @@ import Layout from '../layouts/BlogPost.astro';
 	title="About Me"
 	description="A little about me"
 	pubDate={new Date('Sep 27, 2024')}
-	heroImage=`${import.meta.env.BASE_URL}/coming-soon.jpg`
+	heroImage="/coming-soon.jpg"
 >
 </Layout>
