--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -37,7 +37,7 @@ import { SITE_TITLE } from '../consts';
 				  ></path>
 				</svg>
 			</a>
-			<a href="public/Lucas_Da_Cruz_Resume.pdf" target="_blank">
+			<a href="/Lucas_Da_Cruz_Resume.pdf" target="_blank">
 				<span class="sr-only">Checkout my resume</span>
 				<svg viewBox="0 0 24 24" aria-hidden="true" width="28" height="28" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 				  <path d="M6 2a2 2 0 0 0-2 2v16c0 1.1.9 2 2 2h12a2 2 0 0 0 2-2V8l-6-6H6zm7 1.5L18.5 9H13V3.5zM8 12h8v2H8v-2zm0 4h8v2H8v-2z"/>
