Fix blog structure and add term 2 progress

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -56,7 +56,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 		<main>
 			<article>
 				<div class="hero-image">
-					{heroImage && <img src={heroImage} alt="" />}
+					{heroImage && <img width="25%" src={heroImage} alt="" />}
 				</div>
 				<div class="prose">
 					<div class="title">
