Add about me content

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,8 +4,55 @@ import Layout from '../layouts/BlogPost.astro';
 
 <Layout
 	title="About Me"
-	description="A little about me"
+	description=''
 	pubDate={new Date('Sep 27, 2024')}
-	heroImage="/coming-soon.jpg"
+	heroImage="/about_me.jpg"
 >
+  <h2>Intro</h2>
+  <p>
+	I’m a software engineer passionate about developing technologies that spark my curiosity and that makes a difference.
+  </p>
+  <p>
+	I started my software engineering journey through books. My first two books that introduced me into the tech world were <a href="https://a.co/d/0Efxh9d">Python Programming: An Introduction to Computer Science</a>
+	and <a href="https://a.co/d/hnTLEDl">Automate the Boring Stuff with Python</a>. Since then, I’ve read numerous books and worked on a wide range of personal and professional projects.
+  </p>
+
+  <h2>👨🏻‍💻 What I do</h2>
+  <p>
+    In my current full-time role, I work in DevOps — creating cloud-based infrastructure in both Azure and AWS using Terraform, developing internal tools to boost engineering efficiency, building CI/CD pipelines, and managing containerized apps with Docker. At my side gig, I focus on automating manual QA-related processes.
+
+    I'm also exploring the world of robotics software development, especially using ROS 2 and C++.
+  </p>
+
+  <h2>📚 What I'm Learning / Building</h2>
+  <p>
+    Right now, besides being self-taught, my academic background includes a B.S. in Computer Science of which I'm aiming to graduate this November (2025).
+	I'm always learning though, so besides my current academic pursuits, I'm also reading a few books on the side to learn about new technologies or
+	tech areas that I'm interested in. Right now I'm reading <a href="https://a.co/d/iyZxw8H">ROS 2 from Scratch</a> which teaches how to use ROS 2 using both
+	Python and C++. It's been a great resource so far!
+  </p>
+
+  <h2>🛠️ Tools & Technologies</h2>
+  <ul>
+    <li><strong>DevOps:</strong> Terraform, Docker, GitHub Actions, Azure DevOps, K8s, AKS, EKS</li>
+    <li><strong>Languages:</strong> C++, Python, C#, Java, Typescript</li>
+    <li><strong>Robotics:</strong> ROS2, real-time systems, simulation</li>
+    <li><strong>Web & Platform:</strong> .NET, React, Angular, Backstage, Express.js, Flask, FastAPI, Astro</li>
+  </ul>
+
+  <h2>🚀 Current Personal Projects</h2>
+  <ul>
+	<li>Building basic ROS 2 nodes in C++ to better understand inter-node communication</li>
+    <li>A simple CGPA calculator in C++</li>
+    <li>Inspired by IronMan's Jarvis, a real-time Python voice assistant powered by an LLM</li>
+  </ul>
+
+  <h2>📫 Let’s Connect</h2>
+  <p>
+    I'm always open to new opportunities and collaborations! If you want to chat, you can reach me on 
+	<a href="https://github.com/ldacruz94">GitHub</a>, 
+	<a href="https://www.linkedin.com/in/lucas-da-cruz-992738110">LinkedIn</a>, or just
+	<a href="mailto:lucaspavesi11@gmail.com">email me</a> directly.
+  </p>
+
 </Layout>
