Update styles and formatting

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -81,13 +81,14 @@ import { SITE_TITLE } from '../consts';
 	.external-links a {
 		display: flex;
 	}
-	@media (max-width: 720px) {
-		.social-links {
-			display: none;
-		}
-	}
 	.external-links a:hover {
 		color: #1da1f2; 
 		text-decoration: none;
+	}
+
+	@media (max-width: 720px) {
+		.external-links {
+			display: none;
+		}
 	}
 </style>
