--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,13 +12,13 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 	</head>
 	<body>
 		<Header />
-		<main class="pt-20 pb-10">
+		<main>
 			<h1>👋🏼 Hi, there!</h1> 
 			<h2>I'm Lucas Da Cruz!</h2>
 			<p>
 				I am a Software Engineer 🧑‍💻 and a bookworm 🤓📚
 			</p>
-			<p class="pb-20">
+			<p>
 				I currently work full-time at <a class="underline" href="https://www.ecolab.com/" target="_blank">Ecolab</a> as a Software Engineer and part-time as an automation engineer contractor for <a class="underline" href="https://www.torchlight.care/" target="_blank">Torchlight</a>. 
 				I am also pursuing a Bachelor's of Science in Computer Science at <a class="underline" href="https://www.wgu.edu/" target="_blank">Western Governors University (WGU)</a>, 
 				striving to expand my skills and expertise in the field.</a>				
