--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,35 +6,41 @@ const today = new Date();
 	Copyright &copy; Lucas Da Cruz {today.getFullYear()} | All rights reserved.
 	<div class="social-links">
 		<a href="https://www.linkedin.com/in/lucas-da-cruz-992738110" target="_blank">
-				<span class="sr-only">Visit my LinkedIn profile</span>
-				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="32" height="32" fill="currentcolor">
-				  <path d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.3c-.97 0-1.75-.79-1.75-1.75s.79-1.75 1.75-1.75 1.75.79 1.75 1.75-.78 1.75-1.75 1.75zm13.5 11.3h-3v-5.6c0-1.34-.03-3.07-1.87-3.07-1.87 0-2.16 1.46-2.16 2.97v5.7h-3v-10h2.88v1.36h.04c.4-.75 1.38-1.54 2.84-1.54 3.04 0 3.6 2 3.6 4.63v5.55z"/>
-				</svg>
-			  </a>			  
-			<a href="https://github.com/ldacruz94" target="_blank">
-				<span class="sr-only">Go to my GitHub repo</span>
-				<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
-					><path
-						fill="currentcolor"
-						d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
-					></path>
-				</svg
-				>
-			</a>
-			<a href="mailto:lucaspavesi11@gmail.com" target="_blank">
-				<span class="sr-only">Send me an email</span>
-				<svg viewBox="0 0 24 24" aria-hidden="true" width="32" height="32">
-				  <path
+			<span class="sr-only">Visit my LinkedIn profile</span>
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="32" height="32" fill="currentcolor">
+				<path d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.76 0 5-2.24 5-5v-14c0-2.76-2.24-5-5-5zm-11 19h-3v-10h3v10zm-1.5-11.3c-.97 0-1.75-.79-1.75-1.75s.79-1.75 1.75-1.75 1.75.79 1.75 1.75-.78 1.75-1.75 1.75zm13.5 11.3h-3v-5.6c0-1.34-.03-3.07-1.87-3.07-1.87 0-2.16 1.46-2.16 2.97v5.7h-3v-10h2.88v1.36h.04c.4-.75 1.38-1.54 2.84-1.54 3.04 0 3.6 2 3.6 4.63v5.55z"/>
+			</svg>
+		</a>			  
+		<a href="https://github.com/ldacruz94" target="_blank">
+			<span class="sr-only">Go to my GitHub repo</span>
+			<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32">
+				<path
 					fill="currentcolor"
-					d="M20 4H4C2.9 4 2 4.9 2 6v12c0 1.1 0.9 2 2 2h16c1.1 0 2-0.9 2-2V6c0-1.1-0.9-2-2-2zm0 4.75L12 12.5 4 8.75V6l8 4.5 8-4.5v2.75z"
-				  ></path>
-				</svg>
-			</a>	
+					d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z">
+				</path>
+			</svg
+			>
+		</a>
+		<a href="mailto:lucaspavesi11@gmail.com" target="_blank">
+			<span class="sr-only">Send me an email</span>
+			<svg viewBox="0 0 24 24" aria-hidden="true" width="32" height="32">
+				<path
+					fill="currentcolor"
+					d="M20 4H4C2.9 4 2 4.9 2 6v12c0 1.1 0.9 2 2 2h16c1.1 0 2-0.9 2-2V6c0-1.1-0.9-2-2-2zm0 4.75L12 12.5 4 8.75V6l8 4.5 8-4.5v2.75z">
+				</path>
+			</svg>
+		</a>
+		<a href="/Lucas_Da_Cruz_Resume.pdf" target="_blank">
+			<span class="sr-only">Checkout my resume</span>
+			<svg viewBox="0 0 24 24" aria-hidden="true" width="28" height="28" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+				<path d="M6 2a2 2 0 0 0-2 2v16c0 1.1.9 2 2 2h12a2 2 0 0 0 2-2V8l-6-6H6zm7 1.5L18.5 9H13V3.5zM8 12h8v2H8v-2zm0 4h8v2H8v-2z"/>
+			</svg>
+		</a>
 	</div>
 </footer>
 <style>
 	footer {
-		padding: 9em 1em 1em 1em;
+		padding: 1em 1em 1em 1em;
 		background: linear-gradient(var(--gray-gradient)) no-repeat;
 		color: rgb(var(--gray));
 		text-align: center;
