--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,6 +29,14 @@
 	font-style: normal;
 	font-display: swap;
 }
+
+html, body {
+	height: 100%;
+	 margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
 body {
 	font-family: 'Atkinson', sans-serif;
 	margin: 0;
