revamp site about me and layout

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -2,8 +2,11 @@
 import type { CollectionEntry } from 'astro:content';
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
 import FormattedDate from '../components/FormattedDate.astro';
+import EmailLine from '../components/EmailLine.astro';
+import Footer from '../components/Footer.astro';
+import SocialMediaLine from '../components/SocialMediaLine.astro';
+import { EMAIL } from '../consts';
 
 type Props = CollectionEntry<'blog'>['data'];
 
@@ -78,6 +81,10 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				</div>
 			</article>
 		</main>
+		<div class="sticky-container">
+			<SocialMediaLine />
+			<EmailLine email={EMAIL} />
+		</div>
 		<Footer />
 	</body>
 </html>
