--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,7 +47,7 @@ body {
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 	color: rgb(var(--gray-dark));
-	font-size: 20px;
+	font-size: 16px;
 	line-height: 1.7;
 }
 main {
@@ -143,6 +143,15 @@ hr {
 	}
 }
 
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
 .sr-only {
 	border: 0;
 	padding: 0;
@@ -159,4 +168,18 @@ hr {
 	clip-path: inset(50%);
 	/* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
 	white-space: nowrap;
+}
+@media screen and (max-width: 850px) {
+	.sticky-container {
+		display: none;
+	}
+	footer {
+		display: block;
+	}
+}
+
+@media screen and (min-width: 850px) {
+	footer {
+		display: none;
+	}
 }
