--- a/src/components/EmailLine.astro
+++ b/src/components/EmailLine.astro
@@ -14,7 +14,7 @@
 .right-line {
 	position: fixed;
 	right: 2rem;
-	bottom: 2rem;
+	bottom: 0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
