--- a/src/components/SocialMediaLine.astro
+++ b/src/components/SocialMediaLine.astro
@@ -22,7 +22,7 @@
 .left-line {
 	position: fixed;
 	left: 2rem;
-	bottom: 2rem;
+	bottom: 0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
