--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@ import "../styles/header.css";
 		<div class="internal-links">
 			<HeaderLink id="header_about" href="/">About</HeaderLink>
 			<HeaderLink id="header_blog" href="/blog">Blog</HeaderLink>
-			<HeaderLink id="header_resume" href="/Lucas_Da_Cruz_Resume.pdf">Résumé</HeaderLink>
+			<HeaderLink id="header_resume" href="/Lucas_Da_Cruz_Resume.pdf" target='_blank'>Résumé</HeaderLink>
 		</div>
 		</div>
 	</nav>
