add projects page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,6 +10,7 @@ import "../styles/header.css";
 		<div class="internal-links">
 			<HeaderLink id="header_about" href="/">About</HeaderLink>
 			<HeaderLink id="header_blog" href="/blog">Blog</HeaderLink>
+			<HeaderLink id="header_projects" href="/projects">Projects</HeaderLink>
 		</div>
 		</div>
 	</nav>
