--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -43,7 +43,7 @@ nav a:hover {
     animation-delay: 1.5s;
 }
 
-#header_resume {
+#header_projects {
     opacity: 0;
     animation: fadeIn 1s ease-in-out forwards;
     animation-delay: 2s;
